Refractored chat as seperate module

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,19 +70,6 @@
     <Compile Include="Assets\GSPToggleManager.cs" />
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\CannelPannelIno.cs" />
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\ChannelDeamonManager.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\ConstantsChat.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\HomeScreen.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\LoginScreen.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\MUCHandler.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\MemberMatrix.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\SSTools\Scripts\SSTools.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\Singleton.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\TabMatrix.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\ToastManager.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\UIManagerChat.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\UnityMainThreadDispatcher.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\UserDetails.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\Chat\XMPPConnection.cs" />
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\Controller\BlockChainStatusView.cs" />
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\Controller\BlockchainManager.cs" />
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\Controller\GameChannelManager.cs" />
@@ -120,17 +107,29 @@
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\UIScripts\PanelAnim.cs" />
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\UIScripts\UpDownMenuBtn.cs" />
     <Compile Include="Assets\ShipBattleGameAssets\Scripts\Utils.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\AsyncCoroutineParent.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\AsynchroniousRequests.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\ConnectionStatusSolver.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\ElectrumWalletHandler.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\RPCRequest.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\Singleton.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\XAYADummyUI.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\XAYADummyUISettings.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\XAYAJsonStructs.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\XAYASettings.cs" />
-    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XayaModule\XAYAWalletAPI.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\ConstantsChat.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\HomeScreen.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\MUCHandler.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\MemberMatrix.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\SSTools\Scripts\SSTools.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\Singleton.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\TabMatrix.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\ToastManager.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\UIManagerChat.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\UnityMainThreadDispatcher.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\UserDetails.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYAChat\XMPPConnection.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\AsyncCoroutineParent.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\AsynchroniousRequests.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\ConnectionStatusSolver.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\ElectrumWalletHandler.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\RPCRequest.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\Singleton.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\XAYADummyUI.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\XAYADummyUISettings.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\XAYAJsonStructs.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\XAYASettings.cs" />
+    <Compile Include="Assets\ShipBattleGameAssets\Scripts\XAYACore\XAYAWalletAPI.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
